# tqdmnd

./: LICENSE  README.md  pyproject.toml
src/tqdmnd/: __init__.py  tqdmnd.py
