[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tqdmnd"
version = "1.0.0"
authors = [
  { name="Steven Zeltmann", email="steven.zeltmann@lbl.gov" },
]
description = "A simple wrapper for tqdm supporting N-dimensional spaces"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "tqdm",
  "numpy"
]

[project.urls]
"Homepage" = "https://github.com/sezelt/tqdmnd"
"Bug Tracker" = "https://github.com/sezelt/tqdmnd/issues"

[tool.setuptools.packages.find]
where = ["src"]